Updated some text and structure

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<section id="header">
 
 					<!-- Logo -->
-						<h1><a href="index.html">Dopetrope</a></h1>
+						<h1><a href="index.html">WELCOME</a></h1>
 
 					<!-- Nav -->
 						<nav id="nav">
@@ -28,24 +28,17 @@
 									<a href="#">Projects</a>
 									<ul>
 										<li><a href="https://github.com/VulpineReynard/responsive-web-design-I">Great Idea Website</a></li>
-										<li><a href="#">Magna phasellus</a></li>
-										<li><a href="#">Etiam dolore nisl</a></li>
+										<li><a href="#">Project 2</a></li>
+										<li><a href="#">Project 3</a></li>
 										<li>
-											<a href="#">Phasellus consequat</a>
-											<ul>
-												<li><a href="#">Magna phasellus</a></li>
-												<li><a href="#">Etiam dolore nisl</a></li>
-												<li><a href="#">Veroeros feugiat</a></li>
-												<li><a href="#">Nisl sed aliquam</a></li>
-												<li><a href="#">Dolore adipiscing</a></li>
-											</ul>
+											<a href="#">Project 4</a>
 										</li>
-										<li><a href="#">Veroeros feugiat</a></li>
+										<li><a href="#">Project 5</a></li>
 									</ul>
 								</li>
-								<li><a href="left-sidebar.html">Left Sidebar</a></li>
-								<li><a href="right-sidebar.html">Right Sidebar</a></li>
-								<li><a href="no-sidebar.html">No Sidebar</a></li>
+								<li><a href="###">Life Through Stoicism</a></li>
+								<li><a href="###">About Me</a></li>
+								<li><a href="###">Contact</a></li>
 							</ul>
 						</nav>
 
@@ -112,23 +105,37 @@
 										<div class="row">
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box">
-													<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+													<a href="https://github.com/VulpineReynard/responsive-web-design-I" class="image featured"><img src="images/great-idea.jpg" alt="" /></a>
 													<header>
 														<h3>Great Idea Website</h3>
 													</header>
 													<p>The Great Idea Website is a work in progress website that I use as a playground for new skills I learn in Web Development. This project is still changing regularly.</p>
 													<footer>
 														<ul class="actions">
-															<li><a href="#" class="button alt">Find out more</a></li>
+															<li><a href="https://github.com/VulpineReynard/responsive-web-design-I" class="button alt">Find out more</a></li>
 														</ul>
 													</footer>
 												</section>
 											</div>
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box">
-													<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+													<a href="https://github.com/VulpineReynard/Sprint-Challenge--User-Interface" class="image featured"><img src="images/user-interface.png" alt="" /></a>
 													<header>
-														<h3>Sed etiam lorem nulla</h3>
+														<h3>User Interface Challenge</h3>
+													</header>
+													<p>A website created and styled to demonstrate adequacy in flexbox layout.</p>
+													<footer>
+														<ul class="actions">
+															<li><a href="https://github.com/VulpineReynard/Sprint-Challenge--User-Interface" class="button alt">Find out more</a></li>
+														</ul>
+													</footer>
+												</section>
+											</div>
+											<div class="col-4 col-6-medium col-12-small">
+												<section class="box">
+													<a href="#" class="image featured"><img src="images/project-4.jpg" alt="" /></a>
+													<header>
+														<h3>Project 3</h3>
 													</header>
 													<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit  adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
 													<footer>
@@ -140,23 +147,9 @@
 											</div>
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box">
-													<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
+													<a href="#" class="image featured"><img src="images/project-5.jpg" alt="" /></a>
 													<header>
-														<h3>Consequat et tempus</h3>
-													</header>
-													<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit  adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
-													<footer>
-														<ul class="actions">
-															<li><a href="#" class="button alt">Find out more</a></li>
-														</ul>
-													</footer>
-												</section>
-											</div>
-											<div class="col-4 col-6-medium col-12-small">
-												<section class="box">
-													<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-													<header>
-														<h3>Blandit sed adipiscing</h3>
+														<h3>Project 4</h3>
 													</header>
 													<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit  adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
 													<footer>
@@ -170,7 +163,7 @@
 												<section class="box">
 													<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
 													<header>
-														<h3>Etiam nisl consequat</h3>
+														<h3>Project 5</h3>
 													</header>
 													<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit  adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
 													<footer>
@@ -184,7 +177,7 @@
 												<section class="box">
 													<a href="#" class="image featured"><img src="images/pic07.jpg" alt="" /></a>
 													<header>
-														<h3>Dolore nisl feugiat</h3>
+														<h3>Project 6</h3>
 													</header>
 													<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit  adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
 													<footer>
@@ -193,54 +186,8 @@
 														</ul>
 													</footer>
 												</section>
-											</div>
 										</div>
 									</section>
-
-							</div>
-							<div class="col-12">
-
-								<!-- Blog -->
-									<section>
-										<header class="major">
-											<h2>The Blog</h2>
-										</header>
-										<div class="row">
-											<div class="col-6 col-12-small">
-												<section class="box">
-													<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
-													<header>
-														<h3>Magna tempus consequat</h3>
-														<p>Posted 45 minutes ago</p>
-													</header>
-													<p>Lorem ipsum dolor sit amet sit veroeros sed et blandit consequat sed veroeros lorem et blandit  adipiscing feugiat phasellus tempus hendrerit, tortor vitae mattis tempor, sapien sem feugiat sapien, id suscipit magna felis nec elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos lorem ipsum dolor sit amet.</p>
-													<footer>
-														<ul class="actions">
-															<li><a href="#" class="button icon fa-file-text">Continue Reading</a></li>
-															<li><a href="#" class="button alt icon fa-comment">33 comments</a></li>
-														</ul>
-													</footer>
-												</section>
-											</div>
-											<div class="col-6 col-12-small">
-												<section class="box">
-													<a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
-													<header>
-														<h3>Aptent veroeros aliquam</h3>
-														<p>Posted 45 minutes ago</p>
-													</header>
-													<p>Lorem ipsum dolor sit amet sit veroeros sed et blandit consequat sed veroeros lorem et blandit  adipiscing feugiat phasellus tempus hendrerit, tortor vitae mattis tempor, sapien sem feugiat sapien, id suscipit magna felis nec elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos lorem ipsum dolor sit amet.</p>
-													<footer>
-														<ul class="actions">
-															<li><a href="#" class="button icon fa-file-text">Continue Reading</a></li>
-															<li><a href="#" class="button alt icon fa-comment">33 comments</a></li>
-														</ul>
-													</footer>
-												</section>
-											</div>
-										</div>
-									</section>
-
 							</div>
 						</div>
 					</div>
