--- a/assets/index.html
+++ b/assets/index.html
@@ -18,7 +18,7 @@
 				<section id="header">
 
 					<!-- Logo -->
-						<h1><a href="index.html">Dopetrope</a></h1>
+						<h1><a href="index.html">WELCOME</a></h1>
 
 					<!-- Nav -->
 						<nav id="nav">
@@ -114,7 +114,7 @@
 												<section class="box">
 													<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
 													<header>
-														<h3>Ipsum feugiat et dolor</h3>
+														<h3>Hello</h3>
 													</header>
 													<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit  adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
 													<footer>
