--- a/assets/right-sidebar.html
+++ b/assets/right-sidebar.html
@@ -18,7 +18,7 @@
 				<section id="header">
 
 					<!-- Logo -->
-						<h1><a href="index.html">Dopetrope</a></h1>
+						<h1><a href="index.html">WELCOME</a></h1>
 
 					<!-- Nav -->
 						<nav id="nav">
@@ -59,7 +59,7 @@
 
 								<!-- Content -->
 									<article class="box post">
-										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+										<a href="#" class="image featured sidebar"><img src="images/pic01.jpg" alt="" /></a>
 										<header>
 											<h2>Right sidebar</h2>
 											<p>Lorem ipsum dolor sit amet feugiat</p>
